z-index fix

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -700,6 +700,10 @@ video {
   top: 0.625rem;
 }
 
+.top-20 {
+  top: 5rem;
+}
+
 .top-3 {
   top: 0.75rem;
 }
@@ -716,16 +720,16 @@ video {
   top: 2rem;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
 .z-10 {
   z-index: 10;
 }
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[100\] {
+  z-index: 100;
 }
 
 .z-\[9998\] {
@@ -1194,10 +1198,6 @@ video {
 
 .max-w-none {
   max-width: none;
-}
-
-.max-w-sm {
-  max-width: 24rem;
 }
 
 .max-w-xs {
@@ -3509,14 +3509,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:left-auto {
-    left: auto;
-  }
-
-  .sm\:right-4 {
-    right: 1rem;
-  }
-
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -3527,10 +3519,6 @@ video {
 
   .sm\:w-80 {
     width: 20rem;
-  }
-
-  .sm\:w-96 {
-    width: 24rem;
   }
 
   .sm\:w-auto {
@@ -3608,10 +3596,6 @@ video {
 
   .md\:right-auto {
     right: auto;
-  }
-
-  .md\:bottom-auto {
-    bottom: auto;
   }
 
   .md\:top-20 {
